# Build26-BRK206-your-agent-anywhere-multiclient-multidevice-with-github-copilot-sdk

./: .gitignore  math-tool.Tests.ps1  math-tool.ps1  phase1-task-20260707-2025-13.md
.github/: copilot-instructions.md  copilot-review-instructions.md
28-python-agent-demo-remove-before-merge/: 20260716-prompts.md  20260717-prompts.md  20260718-prompts.md  20260719-prompts.md  20260719-shepherd-tasks-20260718-1827-memory.md  20260720-prompts.md  28-python-agent-demo-ignorance-reduction-plan.md  28-python-agent-demo-post-mortem.md
dd-3017826-java-real-estate-demo-remove-before-merge/: 20260703-prompts.md  20260706-prompts.md  20260707-prompts.md  20260708-prompts.md  20260709-prompts.md  20260710-prompts.md  copy-skill-and-scripts.ps1  dd-3014541-csharp-demo-detailed-notes.md  dd-3017826-java-real-estate-demo-ignorance-reduction-plan.md  dd-3029269-create-post-mortem-plan.md  dd-3029269-post-mortem-report.md
dd-3031332-blog-draft-remove-before-merge/: 20260713-prompts.md  dd-3031332-blog-post-draft.md  dd-3031332-blog-post-outline.md
dd-3034809-test-01-remove-before-merge/: dd-3034809-test-01-ignorance-reduction-plan.md
docs/: copilot-sdk-features.md  primefaces-research.md
src/python_agent_orchestrator/: .gitignore  README.md  pyproject.toml
src/python_agent_orchestrator/data/properties/: 00007.json  00009.json  00012.json  00013.json  00014.json  00016.json  00017.json  00018.json  00019.json  00021.json  00023.json  00026.json  00031.json  00032.json  00034.json  00035.json  00038.json  00042.json  00047.json  00048.json  00050.json  00053.json  00054.json  00055.json  00056.json  00058.json  00059.json  00061.json  00062.json  00065.json  00066.json  00067.json  00068.json  00069.json  00070.json  00071.json  00072.json  00076.json  00077.json  00079.json  (+10 more)
src/python_agent_orchestrator/src/python_agent_orchestrator/: __init__.py  agent.py  app_state.py  main.py  models.py  phase.py  property_database.py  ws_manager.py
src/python_agent_orchestrator/src/python_agent_orchestrator/static/css/: pipeline.css
src/python_agent_orchestrator/src/python_agent_orchestrator/templates/: base.html  index.html
src/python_agent_orchestrator/src/python_agent_orchestrator/templates/partials/: agent_detail.html  pipeline.html
src/python_agent_orchestrator/tests/: test_agent.py  test_integration.py  test_main.py  test_property_database.py  test_ws_manager.py
(+205 files in other folders)
