[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-agent-orchestrator"
version = "0.1.0"
description = "FastAPI-based Real Estate Agent Orchestrator demo for GitHub Copilot SDK."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "jinja2",
  "github-copilot-sdk",
  "pydantic",
  "websockets",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "pyright",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require a real Copilot CLI runtime",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
